--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: [self-hosted, mon-site]
+    runs-on: [self-hosted, Linux, ARM64]
 
     steps:
     # 1) Récupérer le code du repo
