--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
     # 1) Récupérer le code du repo
     - name: Check out code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     # 2) Configurer QEMU pour build multi-arch
     - name: Set up QEMU
@@ -21,20 +21,23 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # 4) Build + Push image sur Docker Hub
+    # 4) Login to Docker Hub (NOUVELLE MÉTHODE)
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    # 5) Build + Push image sur Docker Hub
     - name: Build and Push Docker Image
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v5
       with:
         context: .
         platforms: linux/arm64
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:${{ github.sha }}
-        # Le 'sha' du commit est pratique pour un tag unique
-        # Credentials Docker Hub
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    # 5) Déployer sur K3s : maj du Deployment
+    # 6) Déployer sur K3s : maj du Deployment
     - name: Deploy to K3s
       run: |
         # Mettre à jour l'image du déploiement
