--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,7 +40,7 @@ jobs:
     # 6) Déployer sur K3s : maj du Deployment
     - name: Deploy to K3s
       run: |
-        sudo kubectl set image deployment/mon-site-deploy \
+        sudo kubectl --request-timeout=120s set image deployment/mon-site-deploy \
           mon-site-container=${{ secrets.DOCKERHUB_USERNAME }}/mon-site:${{ github.sha }} -n default
         sudo kubectl rollout restart deployment mon-site-deploy
 
