--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,41 +6,36 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: [self-hosted, lab, AMD64]
 
     steps:
-    # 1) Récupérer le code du repo
     - name: Check out code
       uses: actions/checkout@v4
 
-    # 2) Configurer QEMU pour build multi-arch
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-
-    # 3) Configurer Buildx
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    # 4) Login to Docker Hub (NOUVELLE MÉTHODE)
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # 5) Build + Push image sur Docker Hub
-    - name: Build and Push Docker Image
+    - name: Build and Push Docker Image (AMD64 only)
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/arm64
+        platforms: linux/amd64
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:${{ github.sha }}
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:${{ github.sha }}
 
-    # 6) Déployer sur K3s : maj du Deployment
-    - name: Deploy to K3s
+    - name: Set up kubeconfig
       run: |
-        sudo kubectl --request-timeout=120s set image deployment/mon-site-deploy \
-          mon-site-container=${{ secrets.DOCKERHUB_USERNAME }}/mon-site:${{ github.sha }} -n default
-        sudo kubectl rollout restart deployment mon-site-deploy
+        mkdir -p $HOME/.kube
+        echo "${{ secrets.KUBE_CONFIG }}" > $HOME/.kube/config
 
+    - name: Check cluster connection
+      run: kubectl cluster-info
+
+    - name: Deploy to K3s (use latest)
+      run: |
+        kubectl rollout restart deployment/mon-site-deploy -n default
