suppression cache du build image

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,7 @@ jobs:
         context: .
         platforms: linux/amd64
         push: true
+        no-cache: true
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest
           ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:${{ github.sha }}
